--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<jf-nav></jf-nav>
+<fiw-nav></fiw-nav>
 <h1>This is app</h1>
 <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
 <router-outlet></router-outlet>
